--- a/src/views/offerListItem.fxml
+++ b/src/views/offerListItem.fxml
@@ -5,14 +5,13 @@
 <?import javafx.scene.control.Label?>
 
 <?import javafx.scene.control.Separator?>
-<AnchorPane prefHeight="60.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.OfferListItemCtrl">
-   <Separator/>
+<?import javafx.scene.image.Image?>
+<AnchorPane prefHeight="100.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.OfferListItemCtrl">
    <children>
       <HBox>
-         <ImageView id="titlePic">
-         </ImageView>
-<!--         <Separator/>-->
-         <VBox prefHeight="100.0" prefWidth="200.0">
+         <Separator/>
+         <ImageView fx:id="picture" id="titlePic" fitHeight="100" preserveRatio="true" />
+         <VBox prefHeight="100.0">
             <HBox>
                <Label fx:id="transactionType"/>
                <Label fx:id="propertyType"/>
